--- a/src/main/webapp/template/bootstrap.xhtml
+++ b/src/main/webapp/template/bootstrap.xhtml
@@ -17,18 +17,29 @@
 			<div class="col-md-12">
 
 				<div class="panel panel-default">
-					<div class="panel-heading"><ui:insert name="panelHeading"></ui:insert></div>
+					<div class="panel-heading">
+						<ui:insert name="panelHeading">
+							<h3>test</h3>
+						</ui:insert>
+					</div>
+				</div>
+				
+				<div class="panel panel-default">
 					<div class="panel-body">
 						<ui:insert name="content">
 
-							<h3>Hello world</h3>
+							<h3>axaxs</h3>
+							<h3>sadsadsasad</h3>
+							<h3>asdasdsadads</h3>
 
 						</ui:insert>
 					</div>
 				</div>
-
 			</div>
 		</div>
+
+	
+
 
 	</div>
 	<!-- /container -->
