--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -16,7 +16,7 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">My Awesome Application</a>
+				<a class="navbar-brand" href="#">Bank Ponsel</a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
@@ -41,8 +41,8 @@
 							</ul>
 						</li>
 					</h:panelGroup>
-					<li><h:link value="Login" rendered="#{not customerLogin.loggedIn}" /></li>
-					<li><h:link value="Register" rendered="#{not customerLogin.loggedIn}" /></li>
+					<li><h:link value="Login" outcome="/index.xhtml" rendered="#{not customerLogin.loggedIn}"  /></li>
+					<li><h:link value="Register" outcome="/userprofile/registration.xhtml" rendered="#{not customerLogin.loggedIn}"  /></li>
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
