--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -41,7 +41,7 @@
 							</ul>
 						</li>
 					</h:panelGroup>
-					<li><h:link value="Login" outcome="/index.xhtml" rendered="#{not customerLogin.loggedIn}"  /></li>
+					<li><h:link value="Login" outcome="/userprofile/login.xhtml" rendered="#{not customerLogin.loggedIn}"  /></li>
 					<li><h:link value="Register" outcome="/userprofile/registration.xhtml" rendered="#{not customerLogin.loggedIn}"  /></li>
 				</ul>
 			</div>
