--- a/src/main/webapp/template/bootstrap.xhtml
+++ b/src/main/webapp/template/bootstrap.xhtml
@@ -7,6 +7,9 @@
 	<title><ui:insert name="pageTitle">Page Title</ui:insert></title>
 	<link href="/shop/css/bootstrap.min.css" rel="stylesheet" />
 	<link href="/shop/css/navbar.css" rel="stylesheet" />
+	<script src="../jq/jquery.min.js"></script>
+	<script src="../js/bootstrap.min.js" ></script>
+	
 </h:head>
 <h:body>
 	<div class="container">
